force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_UoM_unit_of_measure__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_UoM_unit_of_measure__c</fullName>
    <label>UoM (unit of measure)</label>
    <length>225</length>
    <type>Text</type>
</CustomField>