force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_Ward__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Ward__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ward</label>
    <referenceTo>HRCFSL_Ward__c</referenceTo>
    <relationshipLabel>Order Line Items</relationshipLabel>
    <relationshipName>Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>