force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_Ward_Floor__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Ward_Floor__c</fullName>
    <label>Ward/Floor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>