force-app/main/default/objects/Order_Line_Item__c/fields/JDE_External_Id__c.field-meta.xml
<CustomField>
    <fullName>JDE_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>JDE External Id</label>
    <length>128</length>
    <type>Text</type>
</CustomField>