force-app/main/default/objects/Order_Line_Item__c/fields/Last_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_Status__c</fullName>
    <label>Last Status</label>
    <length>3</length>
    <type>Text</type>
</CustomField>