force-app/main/default/objects/Order_Line_Item__c/fields/Order_Line__c.field-meta.xml
<CustomField>
    <fullName>Order_Line__c</fullName>
    <label>Order Line</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>