force-app/main/default/objects/Order_Line_Item__c/fields/Order_Notes__c.field-meta.xml
<CustomField>
    <fullName>Order_Notes__c</fullName>
    <label>Order Notes</label>
    <length>2055</length>
    <type>LongTextArea</type>
</CustomField>