force-app/main/default/objects/Order_Line_Item__c/fields/Parent_Line__c.field-meta.xml
<CustomField>
    <fullName>Parent_Line__c</fullName>
    <label>Parent Line</label>
    <length>8</length>
    <type>Text</type>
</CustomField>