force-app/main/default/objects/Order_Line_Item__c/fields/Payment_Terms_Desc__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms_Desc__c</fullName>
    <label>Payment Terms Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>