force-app/main/default/objects/Order_Line_Item__c/fields/Ship_To__c.field-meta.xml
<CustomField>
    <fullName>Ship_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Order Line Items</relationshipLabel>
    <relationshipName>Ship_To_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>