force-app/main/default/objects/Order_Line_Item__c/fields/SRP_Code_4_Description__c.field-meta.xml
<CustomField>
    <fullName>SRP_Code_4_Description__c</fullName>
    <label>SRP Code 4 Description</label>
    <length>40</length>
    <type>Text</type>
</CustomField>