force-app/main/default/objects/Order_Line_Item__c/fields/SRP_Code_5__c.field-meta.xml
<CustomField>
    <fullName>SRP_Code_5__c</fullName>
    <label>SRP Code 5</label>
    <length>3</length>
    <type>Text</type>
</CustomField>