force-app/main/default/objects/Order_Line_Item__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>If(AND(OR(Value(Last_Status__c)&lt;980,Value(Last_Status__c)=999),Value(Next_Status__c)=999),&quot;Closed&quot;,If(AND(Value(Last_Status__c)&gt;=980,Value(Next_Status__c)=999),&quot;Cancelled&quot;,If(Value(Next_Status__c)&gt;560,&quot;Shipped&quot;,If(AND(Value(Next_Status__c)&lt;=560,Value(Next_Status__c)&gt;=524),If(Order__r.Hold_Code_01__c=&apos;PN&apos;,&quot;Pending&quot;,&quot;Open&quot;),If(Value(Next_Status__c)&lt;524,&quot;Pending&quot;,&quot;Not Applicable&quot;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>