force-app/main/default/objects/Order_Line_Item__c/fields/SYS_Discount__c.field-meta.xml
<CustomField>
    <fullName>SYS_Discount__c</fullName>
    <formula>IF( List_Price__c  = null  ||  List_Price__c  &lt;= 0, 0, 1-( HRCSVC_Price__c / List_Price__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>