force-app/main/default/objects/Order_Line_Item__c/recordTypes/HRCSVC_Evaluation_Order_Line_Item.recordType-meta.xml
<RecordType>
    <fullName>HRCSVC_Evaluation_Order_Line_Item</fullName>
    <active>true</active>
    <description>Record type to define Evaluation Orders and Evaluation Order Line Items</description>
    <label>Evaluation Order Line Item</label>
</RecordType>