force-app/main/default/objects/Order_Line_Item__c/recordTypes/HRCSVC_Loaner_Order.recordType-meta.xml
<RecordType>
    <fullName>HRCSVC_Loaner_Order</fullName>
    <active>true</active>
    <description>Record type to define Loaner Orders and Loaner Order Line Items</description>
    <label>Loaner Order</label>
</RecordType>