force-app/main/default/objects/Order_Line_Item__c/recordTypes/HRCSVC_Parts_Order_Line_Item.recordType-meta.xml
<RecordType>
    <fullName>HRCSVC_Parts_Order_Line_Item</fullName>
    <active>true</active>
    <description>Record type to define Parts Orders and Parts Order Line Items</description>
    <label>Parts Order Line Item</label>
</RecordType>