force-app/main/default/objects/Order_Line_Item__c/recordTypes/HRCSVC_Rental_Order_Line_Item.recordType-meta.xml
<RecordType>
    <fullName>HRCSVC_Rental_Order_Line_Item</fullName>
    <active>true</active>
    <description>Record type to define Rental Orders and Rental Order Line Items</description>
    <label>Rental Order Line Item</label>
</RecordType>