force-app/main/default/objects/Order_Line_Item__c/validationRules/HRCSVC_Cancelation_Details_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>HRCSVC_Cancelation_Details_Required</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT($Setup.HRCFSL_Org_Exception_Rule__c.HRCFSL_Validation_Rule__c), ISPICKVAL( HRCSVC_Order_Line_Item_Status__c ,&quot;Canceled&quot;) , OR( ISBLANK( HRCSVC_Cancelation_Approver__c ) , ISBLANK( HRCSVC_Cancellation_Reason_Notes__c ) ) )</errorConditionFormula>
    <errorMessage>Required to fill Cancellation Approver and Cancellation Reason Notes fields.</errorMessage>
</ValidationRule>