force-app/main/default/objects/Order_Line_Item__c/validationRules/HRCSVC_Cannot_Cancel_if_more_than_540.validationRule-meta.xml
<ValidationRule>
    <fullName>HRCSVC_Cannot_Cancel_if_more_than_540</fullName>
    <active>true</active>
    <description>SE-1227 - If the ERP status is in an acknowledged status (anything beyond a JDE status of 540), and the user attempts to change the part order status to &quot;Canceled&quot; a validation error is presented.</description>
    <errorConditionFormula>AND(
NOT( $Setup.HRCFSL_Org_Exception_Rule__c.HRCFSL_Validation_Rule__c ),
  VALUE(Last_Status__c) &gt; 540, 
ISPICKVAL( HRCSVC_Order_Line_Item_Status__c , &quot;Canceled&quot;),  RecordType.DeveloperName = &quot;HRCSVC_Parts_Order_Line_Item&quot;   )</errorConditionFormula>
    <errorMessage>The Order Line Item is in an ERP status that does not allow canceling.</errorMessage>
</ValidationRule>