force-app/main/default/objects/Order_Line_Item__c/validationRules/HRCSVC_Cannot_edit_after_submission.validationRule-meta.xml
<ValidationRule>
    <fullName>HRCSVC_Cannot_edit_after_submission</fullName>
    <active>false</active>
    <errorConditionFormula>NOT( $Setup.HRCFSL_Org_Exception_Rule__c.HRCFSL_Validation_Rule__c )&amp;&amp; RecordType.DeveloperName = &quot;HRCSVC_Parts_Order_Line_Item&quot; &amp;&amp; $Profile.Name != &quot;API Profile&quot; &amp;&amp; NOT(ISPICKVAL( Order__r.HRCSVC_Status__c, &quot;Draft&quot;))</errorConditionFormula>
    <errorMessage>You cannot edit an order in Salesforce after submission or cancellation.</errorMessage>
</ValidationRule>