force-app/main/default/objects/Order_Line_Item__c/validationRules/HRCSVC_Pricing_Unit_of_Measure_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>HRCSVC_Pricing_Unit_of_Measure_Required</fullName>
    <active>true</active>
    <description>SE-76 - Based on the override code I select, I am able to enter the subsequent required/not required override fields.</description>
    <errorConditionFormula>AND(RecordType.DeveloperName = &apos;HRCSVC_Rental_Order_Line_Item&apos;, NOT( $Setup.HRCFSL_Org_Exception_Rule__c.HRCFSL_Validation_Rule__c ),(VLOOKUP( $ObjectType.Override_Codes__c.Fields.HRCSVC_Pricing_Unit_of_Measure__c  ,$ObjectType.Override_Codes__c.Fields.Name,
TEXT(HRCSVC_Override_Code__c) )), ISPICKVAL(HRCSVC_Pricing_Unit_of_Measure__c, &quot;&quot;  ))</errorConditionFormula>
    <errorDisplayField>HRCSVC_Pricing_Unit_of_Measure__c</errorDisplayField>
    <errorMessage>For the selected Override Code, the Pricing Unit of Measure is required.</errorMessage>
</ValidationRule>